# libmodbus

./: .gitignore  CMakeLists.txt  modbus_client.cpp  modbus_server.cpp
lib/modbus/: libmodbus.la  libmodbus.so.5.1.0
lib/modbus/pkgconfig/: libmodbus.pc
